<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
<ImageView
    android:id="@+id/image_detail"
    android:layout_width="600px"
    android:layout_height="800px"
    android:scaleType="centerCrop"
    android:layout_gravity="center_horizontal"
    android:src="@mipmap/ic_launcher"
    android:contentDescription="@string/img_description"/>
    <TextView
        android:id="@+id/name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/ch_name_detail"
        android:textSize="30dp"/>
    <TextView
        android:id="@+id/description_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/ch_description_detail"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/skill_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/ch_skill_detail"
        android:textSize="20dp"/>
</LinearLayout>