<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    android:orientation="vertical"
    android:padding="16sp"
    android:id="@+id/header_layout">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:layout_marginTop="120sp"
        android:contentDescription="@string/icon_description"
        android:focusable="true"
        android:src="@drawable/icono" />

    <TextView
        android:id="@+id/header_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/switch_button"
        android:layout_width="214dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_lang" />


</LinearLayout>